spacing correction on work page

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -1563,7 +1563,8 @@ a {
         position: absolute;
         top: 12.5%; }
         .project figcaption p {
-          line-height: 1; } }
+          line-height: 1;
+          margin: 5px; } }
   .project:hover .peephole img {
     -webkit-transform: scale(1.1);
     -ms-transform: scale(1.1);
