--- a/public/styles/site/_work.scss
+++ b/public/styles/site/_work.scss
@@ -99,7 +99,8 @@
 			position: absolute;
 			top: 12.5%; 
 			p {
-				line-height: 1; 
+				line-height: 1;
+				margin: 5px;  
 			}
 		}
 	}
